--- a/front/app/nuxt3weblog/package.json
+++ b/front/app/nuxt3weblog/package.json
@@ -17,7 +17,9 @@
     "vuetify-nuxt-module": "^0.8.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.10",
-    "nuxt-microcms-module": "^3.0.2"
+    "nuxt-microcms-module": "^3.0.2",
+    "vue3-smooth-scroll": "^0.8.1"
   }
 }
