--- a/front/app/nuxt3weblog/package.json
+++ b/front/app/nuxt3weblog/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/sitemap": "^5.0.1",
     "nuxt": "^3.9.0",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5",
