--- a/front/app/nuxt3weblog/package.json
+++ b/front/app/nuxt3weblog/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/sitemap": "^5.0.1",
     "nuxt": "^3.9.0",
+    "nuxt-gtag": "^1.1.2",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5",
     "vuetify-nuxt-module": "^0.8.0"
