--- a/front/app/nuxt3weblog/package.json
+++ b/front/app/nuxt3weblog/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/sitemap": "^7.2.2",
+    "@types/prismjs": "^1.26.5",
     "nuxt": "^3.15.2",
     "nuxt-gtag": "^3.0.2",
     "vue": "^3.5.13",
@@ -22,6 +23,7 @@
     "cheerio": "^1.0.0",
     "dayjs": "^1.11.13",
     "nuxt-microcms-module": "^3.0.2",
+    "prismjs": "^1.30.0",
     "vue3-smooth-scroll": "^0.8.1"
   }
 }
