--- a/front/app/nuxt3weblog/package.json
+++ b/front/app/nuxt3weblog/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/color-mode": "^3.0.0",
     "@nuxtjs/sitemap": "^7.2.2",
     "@types/prismjs": "^1.26.5",
     "nuxt": "^3.15.2",
